Fixed spacing issues

--- a/pages/products/style/style.scss
+++ b/pages/products/style/style.scss
@@ -37,7 +37,7 @@ body {
 }
 
 .product:nth-child(1) {
-	width: 40%;
+	width: 46%;
 	.product-image {
 		background: url('../res/sys-mon-bg.jpg');
 		background-size: 100% 100%;
@@ -45,7 +45,7 @@ body {
 }
 
 .product:nth-child(2) {
-	width: 58%;
+	width: 52%;
 	.product-description {
 		padding: 2rem 0;
 	}
